[package]
name = "pipe_cli"
version = "0.1.0"
authors = ["Andre Zanellato <andre.zanellato@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
confy = "0.3.1"
dialoguer = "0.4.0"
graphql_client = "0.8.0"
quicli = "0.4"
reqwest = "0.9"
rustyline = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.55"
serde_json = "1"
structopt = "0.2"
