[package]
name = "pipe_cli"
version = "0.1.0"
authors = ["Andre Zanellato <andre.zanellato@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
confy  = { git = "https://github.com/rust-cli/confy", branch = "master" }
dialoguer = "0.4.0"
indicatif = "0.11.0"
itertools = "0.8.0"
prettyprint = "0.7.0"
quicli = "0.4"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.55"
serde_json = "1"
structopt = "0.2"
